Change padding right value in active class to fix navigation menu alignment for screens less than or equal to 280px

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -400,6 +400,16 @@ input[type="email"],
         top: 70%;
         margin: 0;
     }
+
+    .navbar ul {
+        align-items: center;
+        justify-content: center;
+    }
+
+    .navbar li.active > a {
+        padding: 1px 3px;
+    }
+    
 }
 
 @media (max-width: 560px) {
